add strucrute of hero section

--- a/index.html
+++ b/index.html
@@ -18,6 +18,95 @@
     </head>
     <body>
 
+        <div class="hero">
+            <div class="container">
+                <header class="header row">
+                    <div class="col-md-6">
+                        <div class="logo">
+                            <h1 class="logo__title">
+                                <a href="/" class="logo__link" title="На главную">
+                                    Микоцин
+                                    <img src="assets/img/logo-main.png" alt="Микоцин" class="logo__img">
+                                </a>
+                            </h1>
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <p>№1 Для избавления от любого типа грибка</p>
+                    </div>
+                    <div class="col-md-2">
+                        <p>Рекомендован дерматологами
+                        </p>
+                    </div>
+                    <div class="col-md-2">
+                        <p>13000+ довольных клиентов за 2018 год
+                        </p>
+                    </div>
+                </header>
+                <div class="promo row justify-content-end">
+                    <div class="col-md-3">
+                        <h2 class="promo__title">
+                            Комплексное избавление от грибка — изнутри и снаружи
+                        </h2>
+                        <ul class="promo__list">
+                            <li class="promo__item">
+                                <p class="promo__features">
+                                    Комплекс Микоцин устраняет зуд, неприятный запах и возвращает эстетичный вид
+                                </p>
+                            </li>
+                            <li class="promo__item">
+                                <p class="promo__features">
+                                    Таблетки Микоцин уничтожают все виды грибка на ногтях и коже
+                                </p>
+                            </li>
+                            <li class="promo__item">
+                                <p class="promo__features">
+                                    Гель Микоцин восстанавливает кожу и создает на ней защитный барьер
+                                </p>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="order-form">
+                            <p class="order-form__title">
+                                Успейте заказать со скидкой
+                                <span>до 10.09.2018</span>
+                            </p>
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <span>старая цена</span>
+                                    918&nbsp;&#x20bd;
+                                </div>
+                                <div class="col-md-6">
+                                    <span>новая цена</span>
+                                    459&nbsp;&#x20bd;
+                                </div>
+                            </div>
+                            <form action="#" method="POST">
+                                <input type="text" name="name" placeholder="Имя">
+                                <input type="text" name="phone" placeholder="Телефон">
+                                <input type="submit" value="Заказать со скидкой">
+                            </form>
+                            <p class="order-form__action">
+                                Осталось
+                                <span>10</span>
+                                упаковок со скидкой
+                            </p>
+                            <p class="order-form__secure-info">
+                                Ваши данные защищены!
+                            </p>
+                        </div>
+                    </div>
+                    <div class="product-photo">
+                        <div class="product-photo__wrapper">
+                            <span class="product-photo__price product-photo__price_primary">299&nbsp;&#x20bd;</span>
+                            <span class="product-photo__price product-photo__price_secondary">299&nbsp;&#x20bd;</span>
+                            <img class="product-photo__img" src="assets/img/product-main.png" alt="Микоцин">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
         <script src="assets/js/libs.js"></script>
         <script src="assets/js/main.js"></script>
