add consequences section

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <ul class="features-list">
                             <li class="features-list__item d-flex align-items-center">
                                 <div class="features-list__number-box">
-                                    <span class="features-list__number">2 в 1</span>
+                                    <span class="features-list__number">2в1</span>
                                 </div>
                                 <p class="features-list__text">
                                     Комплекс Микоцин
@@ -150,12 +150,100 @@
                         <div class="product-photo__wrapper">
                             <span class="product-photo__price product-photo__price_primary">299&#x20bd;</span>
                             <span class="product-photo__price product-photo__price_secondary">299&#x20bd;</span>
-                            <img class="product-photo__img" src="assets/img/product-main.png" alt="Микоцин цена">
+                            <img
+                                class="product-photo__img"
+                                src="assets/img/product-main.png"
+                                alt="Микоцин цена">
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+        <section class="section consequences">
+            <div class="container">
+                <div class="section-header">
+                    <h2 class="section-header__title text-center">
+                        Грибок – это опасная инфекция
+                    </h2>
+                    <p class="section-header__subtitle text-center">
+                        которая угрожает вам и вашим близким, ведь с каждым днем грибок приводит к:
+                    </p>
+                </div>
+                <ul class="row consequences__list justify-content-around">
+                    <li class="consequences__item col-md-3">
+                        <figure class="consequences__photo-box">
+                            <div class="consequences__photo-wrapper">
+                                <img
+                                    src="assets/img/photo-allergy.png"
+                                    alt="Аллергия на коже"
+                                    class="consequences__photo">
+                            </div>
+                            <figcaption class="consequences__item-title">Сложным формам аллергии</figcaption>
+                        </figure>
+                        <p class="consequences__text">Может появится сильная реакция на на привычную пищу, одежду, средства гигиены
+                        </p>
+                    </li>
+                    <li class="consequences__item col-md-3">
+                        <figure class="consequences__photo-box">
+                            <div class="consequences__photo-wrapper">
+                                <img
+                                    src="assets/img/photo-amputation.png"
+                                    alt="Ампутация"
+                                    class="consequences__photo">
+                            </div>
+                            <figcaption class="consequences__item-title">Потере ногтя и ампутации пальца
+                            </figcaption>
+                        </figure>
+                        <p class="consequences__text">После полного разрушения ногтя грибок
+                            распространяется на палец, что приводит к его ампутации
+                        </p>
+                    </li>
+                    <li class="consequences__item col-md-3">
+                        <figure class="consequences__photo-box">
+                            <div class="consequences__photo-wrapper">
+                                <img
+                                    src="assets/img/photo-wound.png"
+                                    alt="Поражения органов"
+                                    class="consequences__photo">
+                            </div>
+                            <figcaption class="consequences__item-title">Тяжелому поражению внутренних органов
+                            </figcaption>
+                        </figure>
+                        <p class="consequences__text">Может привести к повреждениям мозга, слепоте, отказу печени, почек и сердца
+                        </p>
+                    </li>
+                </ul>
+                <div class="statistic consequences__statistic">
+                    <p class="statistic__text">
+                        <strong>Статистика</strong>: каждые 60 секунд врачи диагностируют опасные
+                        поражения внутренних органов, вызванные грибком, у 1-го пациента
+                    </p>
+                </div>
+            </div>
+        </section>
+        <section class="non-effective section section_dark">
+            <div class="container">
+                <div class="section-header">
+                    <h2 class="section-header__title text-center">
+                        Почему большинство средств против грибка малоэффективны
+                    </h2>
+                </div>
+                <ul class="non-effective__list">
+                    <li class="non-effective__item">
+                        <h3 class="non-effective__item-title"></h3>
+                        <p class="non-effective__item-subtitle"></p>
+                    </li>
+                    <li class="non-effective__item">
+                        <h3 class="non-effective__item-title"></h3>
+                        <p class="non-effective__item-subtitle"></p>
+                    </li>
+                    <li class="non-effective__item">
+                        <h3 class="non-effective__item-title"></h3>
+                        <p class="non-effective__item-subtitle"></p>
+                    </li>
+                </ul>
+            </div>
+        </section>
 
         <script src="assets/js/libs.js"></script>
         <script src="assets/js/main.js"></script>
