non-effective section added

--- a/index.html
+++ b/index.html
@@ -213,8 +213,8 @@
                         </p>
                     </li>
                 </ul>
-                <div class="statistic consequences__statistic">
-                    <p class="statistic__text">
+                <div class="section-footer consequences__statistic">
+                    <p class="section-footer__text">
                         <strong>Статистика</strong>: каждые 60 секунд врачи диагностируют опасные
                         поражения внутренних органов, вызванные грибком, у 1-го пациента
                     </p>
@@ -228,20 +228,66 @@
                         Почему большинство средств против грибка малоэффективны
                     </h2>
                 </div>
-                <ul class="non-effective__list">
-                    <li class="non-effective__item">
-                        <h3 class="non-effective__item-title"></h3>
-                        <p class="non-effective__item-subtitle"></p>
+                <ul class="non-effective-list non-effective__list">
+                    <li class="non-effective-list__item non-effective-list__item_miracle">
+                        <div class="non-effective-list__item-wrapper">
+                            <h3 class="non-effective-list__item-title">Чудо-средства</h3>
+                            <p class="non-effective-list__item-subtitle">Обещают, что избавят от грибка меньше, чем за месяц, хотя это невозможно.
+                            </p>
+                            <p class="non-effective-list__text">
+                                Ноготь – это роговой слой кожи. Он не имеет живых клеток. Часть ногтя, которая
+                                уже поражена грибком, не может выздороветь до полного его отрастания.
+                                Единственный способ вылечить грибок –
+                                <strong>
+                                    подавлять его распространение все время, пока ноготь не отрастет заново.
+                                </strong>
+                                Для этого требуется 4-6 месяцев.
+                            </p>
+                        </div>
                     </li>
-                    <li class="non-effective__item">
-                        <h3 class="non-effective__item-title"></h3>
-                        <p class="non-effective__item-subtitle"></p>
+                    <li class="non-effective-list__item non-effective-list__item_cream">
+                        <div class="non-effective-list__item-wrapper">
+                            <h3 class="non-effective-list__item-title">Чудо-средства</h3>
+                            <p class="non-effective-list__item-subtitle">Обещают, что избавят от грибка меньше, чем за месяц, хотя это невозможно.
+                            </p>
+                            <p class="non-effective-list__text">
+                                Ноготь – это роговой слой кожи. Он не имеет живых клеток. Часть ногтя, которая
+                                уже поражена грибком, не может выздороветь до полного его отрастания.
+                                Единственный способ вылечить грибок –
+                                <strong>
+                                    подавлять его распространение все время, пока ноготь не отрастет заново.
+                                </strong>
+                                Для этого требуется 4-6 месяцев.
+                            </p>
+                        </div>
                     </li>
-                    <li class="non-effective__item">
-                        <h3 class="non-effective__item-title"></h3>
-                        <p class="non-effective__item-subtitle"></p>
+                    <li class="non-effective-list__item non-effective-list__item_pill">
+                        <div class="non-effective-list__item-wrapper">
+                            <h3 class="non-effective-list__item-title">Чудо-средства</h3>
+                            <p class="non-effective-list__item-subtitle">Обещают, что избавят от грибка меньше, чем за месяц, хотя это невозможно.
+                            </p>
+                            <p class="non-effective-list__text">
+                                Ноготь – это роговой слой кожи. Он не имеет живых клеток. Часть ногтя, которая
+                                уже поражена грибком, не может выздороветь до полного его отрастания.
+                                Единственный способ вылечить грибок –
+                                <strong>
+                                    подавлять его распространение все время, пока ноготь не отрастет заново.
+                                </strong>
+                                Для этого требуется 4-6 месяцев.
+                            </p>
+                        </div>
                     </li>
                 </ul>
+                <div class="section-footer non-effective__important">
+                    <p class="section-footer__text">
+                        Даже если вы используете наружные и внутренние средства одновременно, это
+                        <strong>
+                            не гарантирует избавления от грибка
+                        </strong>: они могут конфликтовать между собой по составу и блокировать действие
+                        друг друга или быть неэффективными против вашего типа грибка.
+                    </p>
+                </div>
+
             </div>
         </section>
 
