add effective section

--- a/index.html
+++ b/index.html
@@ -287,7 +287,56 @@
                         друг друга или быть неэффективными против вашего типа грибка.
                     </p>
                 </div>
-
+            </div>
+        </section>
+        <section class="effective section">
+            <div class="container">
+                <div class="section-header">
+                    <h2 class="section-header__title text-center">
+                        Почему таблетки
+                        <span class="main-color-accent">Микоцин</span>
+                        от грибка так эффективны?
+                    </h2>
+                    <p class="section-header__subtitle text-center">
+                        Другие средства не дают полную защиту от грибковых инфекций и могут быть опасны
+                    </p>
+                </div>
+                <ul class="effective-list effective__list">
+                    <li class="effective-list__item effective-list__item_creams">
+                        <h3 class="effective-list__item-title">Кремы и мази</h3>
+                        <p class="effective-list__item-text">
+                            <strong>
+                                Не лечат грибок, потому что не проникают в ногтевую пластину.
+                            </strong>
+                            Только временно избавляют от симптомов инфекций. Могут вызвать сильную аллергию
+                            и раздражения на коже.</p>
+                    </li>
+                    <li class="effective-list__item effective-list__item_honey">
+                        <h3 class="effective-list__item-title">Кремы и мази</h3>
+                        <p class="effective-list__item-text">
+                            <strong>
+                                Не лечат грибок, потому что не проникают в ногтевую пластину.
+                            </strong>
+                            Только временно избавляют от симптомов инфекций. Могут вызвать сильную аллергию
+                            и раздражения на коже.</p>
+                    </li>
+                    <li class="effective-list__item effective-list__item_product">
+                        <h3 class="effective-list__item-title">Кремы и мази</h3>
+                        <p class="effective-list__item-text">
+                            <strong>
+                                Не лечат грибок, потому что не проникают в ногтевую пластину.
+                            </strong>
+                            Только временно избавляют от симптомов инфекций. Могут вызвать сильную аллергию
+                            и раздражения на коже.</p>
+                    </li>
+                </ul>
+                <div class="effective-footer effective__footer">
+                    <div class="effective-footer__text-wrapper">
+                        <p class="effective-footer__text">
+                            Зачем лечить сложнее, дольше и дороже, если есть <span class="main-color-accent">Микоцин?</span>
+                        </p>
+                    </div>
+                </div>
             </div>
         </section>
 
