medication section added

--- a/index.html
+++ b/index.html
@@ -333,13 +333,50 @@
                 <div class="effective-footer effective__footer">
                     <div class="effective-footer__text-wrapper">
                         <p class="effective-footer__text">
-                            Зачем лечить сложнее, дольше и дороже, если есть <span class="main-color-accent">Микоцин?</span>
+                            Зачем лечить сложнее, дольше и дороже, если есть
+                            <span class="main-color-accent">Микоцин?</span>
                         </p>
                     </div>
                 </div>
             </div>
         </section>
-
+        <section class="medication section section_dark">
+            <div class="container">
+                <div class="section-header">
+                    <h2 class="section-header__title text-center">
+                        Как применять
+                        <span class="main-color-accent">Микоцин</span>
+                    </h2>
+                </div>
+                <div class="medication__wrapper">
+                    <div class="medication__photo-wrapper">
+                        <img
+                            class="medication__photo"
+                            src="assets/img/photo-prod-with-glass.png"
+                            alt="Микоцин">
+                    </div>
+                    <div class="medication__list-wrapper">
+                        <ul class="medication__list">
+                            <li class="medication__item medication__item_tablets">
+                                <p class="medication__text">
+                                    Принимать по 1 таблетке утром и вечером
+                                </p>
+                            </li>
+                            <li class="medication__item medication__item_tablets-with-glass">
+                                <p class="medication__text">
+                                    Принимать по 1 таблетке утром и вечером
+                                </p>
+                            </li>
+                            <li class="medication__item medication__item_calendar">
+                                <p class="medication__text">
+                                    Принимать по 1 таблетке утром и вечером
+                                </p>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
         <script src="assets/js/libs.js"></script>
         <script src="assets/js/main.js"></script>
     </body>
