fix consequences list

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
             crossorigin="anonymous">
     </head>
     <body>
-
         <div class="hero">
             <div class="container">
                 <header class="header row justify-content-between">
@@ -159,7 +158,7 @@
                 </div>
             </div>
         </div>
-        <section class="section consequences">
+        <section class="consequences section">
             <div class="container">
                 <div class="section-header">
                     <h2 class="section-header__title text-center">
@@ -169,10 +168,10 @@
                         которая угрожает вам и вашим близким, ведь с каждым днем грибок приводит к:
                     </p>
                 </div>
-                <ul class="row consequences__list justify-content-around">
-                    <li class="consequences__item col-md-3">
+                <ul class="consequences__list">
+                    <li class="consequences__item">
                         <figure class="consequences__photo-box">
-                            <div class="consequences__photo-wrapper">
+                            <div class="consequences__photo-wrapper consequences__photo-wrapper_allergy">
                                 <img
                                     src="assets/img/photo-allergy.png"
                                     alt="Аллергия на коже"
@@ -183,9 +182,9 @@
                         <p class="consequences__text">Может появится сильная реакция на на привычную пищу, одежду, средства гигиены
                         </p>
                     </li>
-                    <li class="consequences__item col-md-3">
+                    <li class="consequences__item">
                         <figure class="consequences__photo-box">
-                            <div class="consequences__photo-wrapper">
+                            <div class="consequences__photo-wrapper consequences__photo-wrapper_amputation">
                                 <img
                                     src="assets/img/photo-amputation.png"
                                     alt="Ампутация"
@@ -198,9 +197,9 @@
                             распространяется на палец, что приводит к его ампутации
                         </p>
                     </li>
-                    <li class="consequences__item col-md-3">
+                    <li class="consequences__item">
                         <figure class="consequences__photo-box">
-                            <div class="consequences__photo-wrapper">
+                            <div class="consequences__photo-wrapper consequences__photo-wrapper_wound">
                                 <img
                                     src="assets/img/photo-wound.png"
                                     alt="Поражения органов"
