add media-q for medication section

--- a/index.html
+++ b/index.html
@@ -154,10 +154,10 @@
         <section class="consequences section">
             <div class="container">
                 <div class="section-header">
-                    <h2 class="section-header__title text-center">
+                    <h2 class="section-header__title">
                         Грибок – это опасная инфекция
                     </h2>
-                    <p class="section-header__subtitle text-center">
+                    <p class="section-header__subtitle">
                         которая угрожает вам и вашим близким, ведь с каждым днем грибок приводит к:
                     </p>
                 </div>
@@ -216,7 +216,7 @@
         <section class="non-effective section section_dark">
             <div class="container">
                 <div class="section-header">
-                    <h2 class="section-header__title text-center">
+                    <h2 class="section-header__title">
                         Почему большинство средств против грибка малоэффективны
                     </h2>
                 </div>
@@ -284,12 +284,12 @@
         <section class="effective section">
             <div class="container">
                 <div class="section-header">
-                    <h2 class="section-header__title text-center">
+                    <h2 class="section-header__title">
                         Почему таблетки
                         <span class="main-color-accent">Микоцин</span>
                         от грибка так эффективны?
                     </h2>
-                    <p class="section-header__subtitle text-center">
+                    <p class="section-header__subtitle">
                         Другие средства не дают полную защиту от грибковых инфекций и могут быть опасны
                     </p>
                 </div>
@@ -335,7 +335,7 @@
         <section class="medication section section_dark">
             <div class="container">
                 <div class="section-header">
-                    <h2 class="section-header__title text-center">
+                    <h2 class="section-header__title">
                         Как применять
                         <span class="main-color-accent">Микоцин</span>
                     </h2>
